styles/Home.module.css
.main {
  min-height: 650px;
  width: 100vw;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  flex-direction: column;
  gap: 5rem;
  padding-bottom: 3rem;
  overflow-x: hidden !important;
}

.title {
  text-align: center;
  position: relative;
  top: 2rem;
  font-size: 3.6rem;
}

.dark :where(.title, .disclaimer) {
  color: white;
}

.themeWrapper {
  border: none;
  background-color: rgba(0, 0, 0, .25);
  border-radius: 50%;
  height: fit-content;
  aspect-ratio: 1;
  padding: .5rem;
  color: black;
  font-size: 2rem;
  position: absolute;
  top: 1rem;
  right: 1rem;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
}

.dark .themeWrapper {
  background-color: rgba(255, 255, 255, .25);
  color: white;
}

.createGroupBtn {
  padding: .5rem 1rem;
  font-size: 1.3rem;
  border-radius: .4rem;
  border: solid 1px black;
  outline: none !important;
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: .5rem;
  transition: 250ms ease;
  transition-property: background-color, color, border-color;
}

.dark .createGroupBtn {
  border: solid 1px white;
  background-color: black;
  color: white;
}

.dark .createGroupBtn:where(:hover, :focus, :active) {
  color: black;
  background-color: white;
}

.createGroupBtn:where(:hover, :focus, :active) {
  background-color: black;
  color: white;
  border-color: transparent;
}

.btnIcon {
  font-size: 2rem;
}

/** MODAL CUSTOM STYLES */

.mainModal {
  height: 100%;
  width: 100vw;
  background-color: rgba(0, 0, 0, 0.3);
  position: fixed;
  top: 0;
  left: 0;
  z-index: 10;
  display: flex;
  justify-content: center;
  align-items: center;
  transform: scale(0);
  opacity: 0;
  transform-origin: bottom;
  transition: 400ms ease-out;
  transition-property: opacity;
}

.visible {
  transform: scale(1);
  opacity: 1;
}

.modal {
  padding: 3rem 4rem;
  padding-left: 1rem;
  background-color: white;
  border-radius: .4rem;
  display: flex;
  justify-content: center;
  align-items: flex-start;
  flex-direction: column;
  gap: 2rem;
  position: relative;
  max-width: calc(100vw - 3rem);
  overflow: hidden;
  line-break: anywhere;
}

.dark .modal {
  background-color: rgb(17, 20, 21);
}

.dark .modal *:not(input, button) {
  color: white;
}

.modalHead {
  display: flex;
  justify-content: center;
  align-items: flex-start;
  gap: .4rem;
  flex-direction: column;
}

.groupName {
  font-size: 1.15rem;
}

.modalClose {
  position: absolute;
  right: 1rem;
  top: 1rem;
  font-size: 1.2rem;
  cursor: pointer;
}

.modalTitle {
  font-size: 2.2rem;
}

.modalInput {
  font-size: 1.2rem;
  padding: .5rem .7rem;
  outline: none !important;
  border: solid 1px black;
  max-width: calc(100% + 2rem);
}

.modalInput:focus {
  border: solid 1px #02c8e3;
}

.modalBtn {
  align-self: flex-end;
  background-color: white;
  color: black;
  border: solid 1px black;
  border-radius: .2rem;
  margin-top: 1rem;
  padding: .4rem .6rem;
  font-size: 1.2rem;
  cursor: pointer;
  outline: none !important;
  transition: 400ms ease;
  transition-property: background-color, border-color, color;
}

.dark .modalBtn {
  background-color: transparent;
  border: solid 1px white;
  color: white;
}

.dark .modalBtn:where(:hover, :focus, :active) {
  background-color: white;
  color: black;
  border-color: transparent;
}

.modalBtn:where(:hover, :focus, :active) {
  background-color: black;
  color: white;
  border-color: transparent;
}


/* */

/** MAIN CODE ONCE AGAIN */

/* */


.groupContainer {
  display: grid;
  grid-template-columns: auto;
  gap: 3rem;
}

.group {
  border-radius: .6rem;
  background-color: #9eedef;
  padding: 2rem;
  display: flex;
  justify-content: flex-start;
  align-items: flex-start;
  gap: 1.2rem;
  flex-direction: column;
  width: 50rem;
  max-width: 65vw;
  overflow-x: hidden;
}

@media (max-width: 860px) {

  .group {
    max-width: 85vw !important;
  }

}

.dark .group {
  background-color: #344d65;
}

.dark .group :where(.groupTitle, .titleMethodIcon, .tasks) {
  color: white;
}

.groupTitle {
  font-size: 2rem;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  gap: 1rem;
  line-break: anywhere;
  max-width: 100%;
}

.titleMethodIcon {
  cursor: pointer;
  background-color: rgba(0, 0, 0, .1);
  padding: .2rem;
  border-radius: .2rem;
  font-size: 2rem;
}

@media (max-width: 500px) {
  .groupTitle {
    font-size: 1.8rem;
  }

  .titleMethodIcon {
    font-size: 3rem;
  }
}

.createTaskBtn {
  padding: .5rem .8rem;
  margin-top: .7rem;
  margin-bottom: 2rem;
  font-size: 1.2rem;
  border-radius: .4rem;
  border: solid 1px black;
  outline: none !important;
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: .5rem;
  transition: 250ms ease;
  transition-property: background-color, color, border-color;
}

.dark .createTaskBtn {
  background-color: black;
  color: white;
}

.addTaskIcon {
  font-size: 2rem;
}

.dark .createTaskBtn:where(:hover, :focus, :active) {
  background-color: white;
  color: black;
  border-color: transparent;
}

.dark .createTaskBtn:where(:hover, :focus, :active) * {
  color: black !important;
}

.createTaskBtn:where(:hover, :focus, :active) {
  background-color: black;
  color: white;
  border-color: transparent;
}

.tasks {
  display: flex;
  justify-content: center;
  align-items: flex-start;
  flex-direction: column;
  gap: 1ch;
  width: 100%;
}

.task {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  font-size: 1.2rem;
}

.pending {
  text-decoration: none;
}

.done .actualTask {
  text-decoration: 2px line-through;
  color: rgb(94, 94, 94);
}

.dark .done .actualTask {
  color:rgb(156, 156, 156) !important;
}

.important {
  background-color: rgba(255, 0, 0, 0.422);
}

.dark .important {
  background-color: rgba(255, 0, 0, .229);
}

.text {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  gap: 1rem;
  line-break: loose;
  max-width: calc(65vw - calc(1.2rem + 3rem))
}

@media (max-width: 860px) {
  .text {
    max-width: calc(85vw - calc(1.2rem + 5rem));
    overflow: hidden;
  }  
}

.important .importantMark {
  font-size: 2rem;
}

.important .text {
  padding-left: .5rem;
  padding-right: .7rem;
}

.important .deleteTask {
  color: black;
}

.normal {
  font-size: 1.2rem;
}

.taskFunctions {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 1.2rem;
}

@media (max-width: 660px) {
  .taskFunctions {
    gap: .8rem;
  }
}

.editIcon, .statusIcon, .deleteTask, .importanceIcon {
  cursor: pointer;
  font-size: 1.4rem;
}

.deleteTask {
  color: #ff3131;
}

.dark .deleteTask {
  color: #ff7a63 !important;
}

